<resources>
    <string name="app_name">Tercih Buddy</string>
    <string name="tercih_buddy">tercih_buddy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="sehir_ve_universite_secimi">Sehir ve Universite secimi</string>
    <string name="alanlar_bolumler">Alanlar Bolumler</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="register">Register</string>
    <string name="if_you_have_account_click_here">If You Have Account Click Here</string>
    <string name="ac_k_deniz_sondaj_teknolojisi">Acık Deniz Sondaj Teknolojisi</string>
    <string name="ana_menu">Ana Menu</string>
    <string name="bolumleri_goster">Bolumleri Goster</string>
    <string name="acil_durum_ve_afet_y_netimi">Acil Durum ve Afet Yönetimi</string>
    <string name="_2_yillik_bolumler">2 Yillik Bolumler</string>
    <string name="almanca_ogretmenligi_dil">Almanca Ogretmenligi (DIL)</string>
    <string name="aktuerya_bilimleri_say">Aktuerya Bilimleri (SAY)</string>
    <string name="aile_ve_tuketici_bilimleri_ea">Aile ve Tuketici Bilimleri (EA)</string>
    <string name="aga_isleri_endustri_muhendisligi_say">Agaç Isleri Endustri Muhendisligi (SAY)</string>
    <string name="adli_bilisim_muhendisligi_m_t_o_k_say">Adli Bilisim Muhendisligi (M.T.O.K.) (SAY)</string>
    <string name="adli_bilisim_muhendisligi_say">Adli Bilisim Muhendisligi (SAY)</string>
    <string name="adli_bilimler_say">Adli Bilimler (SAY)</string>
    <string name="acil_yardim_ve_afet_yonetimi_say">Acil Yardim ve Afet Yonetimi (SAY)</string>
    <string name="_4_yillik_bolumler">4 Yillik Bolumler</string>
    <string name="dil">Dil</string>
    <string name="sozel">Sozel</string>
    <string name="adayin_puan_araligi">Adayin Puan Araligi</string>
    <string name="adayin_siralama_araligi">Adayin Siralama Araligi</string>
    <string name="ucretli_indirimsiz_bolumler">Ucretli Indirimsiz bolumler</string>
    <string name="_50_indirimli_bolumler">%50 Indirimli bolumler</string>
    <string name="_25_indirimli_bolumler">%25 Indirimli bolumler</string>
    <string name="ucretsiz_bolumler">Ucretsiz bolumler</string>
    <string name="burslu_bolumler">Burslu bolumler</string>
    <string name="vakif_ozel_universiteler">Vakif Ozel Universiteler</string>
    <string name="devlet_universiteleri">Devlet Universiteleri</string>
    <string name="acikogretim_bolumleri_2_yillik">Acikogretim Bolumleri 2 Yillik</string>
    <string name="acikogretim_bolumleri_4_yillik">Acikogretim Bolumleri 4 Yillik</string>
    <string name="ozel_yetenek_bolumleri">Ozel yetenek Bolumleri</string>
    <string name="arama_kriterleri">Arama Kriterleri</string>
    <string name="tercih_listem">Tercih Listem</string>
    <string name="_1_tercih_edilen_bolum">1) Tercih Edilen Bolum</string>
    <string name="_2_tercih_edilen_bolum">2) Tercih Edilen Bolum</string>
    <string name="_3_tercih_edilen_bolum">3) Tercih Edilen Bolum</string>
    <string name="_4_tercih_edilen_bolum">4) Tercih Edilen Bolum</string>
    <string name="_5_tercih_edilen_bolum">5) Tercih Edilen Bolum</string>
    <string name="_6_tercih_edilen_bolum">6) Tercih Edilen Bolum</string>
    <string name="_7_tercih_edilen_bolum">7) Tercih Edilen Bolum</string>
    <string name="_8_tercih_edilen_bolum">8) Tercih Edilen Bolum</string>
    <string name="_9_tercih_edilen_bolum">9) Tercih Edilen Bolum</string>
    <string name="_10_tercih_edilen_bolum">10) Tercih Edilen Bolum</string>
    <string name="_11_tercih_edilen_bolum">11) Tercih Edilen Bolum</string>
    <string name="_12_tercih_edilen_bolum">12) Tercih Edilen Bolum</string>
    <string name="_13_tercih_edilen_bolum">13) Tercih Edilen Bolum</string>
    <string name="_14_tercih_edilen_bolum">14) Tercih Edilen Bolum</string>
    <string name="_15_tercih_eilen_bolum">15) Tercih Eilen Bolum</string>
    <string name="_17_tercih_edilen_bolum">17) Tercih Edilen Bolum</string>
    <string name="_16_tercih_edilen_bolum">16) Tercih Edilen Bolum</string>
    <string name="_15_tercih_edilen_bolum">15) Tercih Edilen Bolum</string>
    <string name="_18_tercih_edilen_bolum">18) Tercih Edilen Bolum</string>
    <string name="_19_tercih_edilen_bolum">19) Tercih Edilen Bolum</string>
    <string name="_20_tercih_edilen_bolum">20) Tercih Edilen Bolum</string>
    <string name="_21_tercih_edilen_bolum">21) Tercih Edilen Bolum</string>
    <string name="_22_tercih_edilen_bolum">22) Tercih Edilen Bolum</string>
    <string name="_23_tercih_edilen_bolum">23) Tercih Edilen Bolum</string>
    <string name="_24_tercih_edilen_bolum">24) Tercih Edilen Bolum</string>
    <string name="_25_tercih_edilen_bolum">25) Tercih Edilen Bolum</string>
    <string name="tercih_listemden_kaldir">Tercih Listemden Kaldir</string>
    <string name="ankara">Ankara</string>
    <string name="istanbul">Istanbul</string>
    <string name="mugla">Mugla</string>
    <string name="izmir">Izmir</string>
    <string name="eskisehir">Eskisehir</string>
    <string name="duzce">Duzce</string>
    <string name="erzurum">Erzurum</string>
    <string name="konya">Konya</string>
    <string name="karaman">Karaman</string>
    <string name="balikesir">Balikesir</string>
    <string name="canakkale">Canakkale</string>
    <string name="kirikkale">Kirikkale</string>
    <string name="gaziantep">Gaziantep</string>
    <string name="sakarya">Sakarya</string>
    <string name="aydin">Aydin</string>
    <string name="mugla_sitki_kocman_universitesi">Mugla Sitki Kocman Universitesi</string>
    <string name="odtu">Odtu</string>
    <string name="listelenen_bolumler">Listelenen Bolumler</string>
    <string name="bilgisayar_muhendisligi">Bilgisayar Muhendisligi</string>
    <string name="elektrik_elektronik_muh">Elektrik-Elektronik Muh.</string>
    <string name="endustri_muhendisligi">Endustri Muhendisligi</string>
    <string name="havacilik_ve_uzay_muh">Havacilik ve Uzay Muh.</string>
    <string name="makine_muh">Makine Muh.</string>
    <string name="kimya_muhendisligi">Kimya Muhendisligi</string>
    <string name="fizik">Fizik</string>
    <string name="matematik">Matematik</string>
    <string name="istatistik">Istatistik</string>
    <string name="mimarlik">Mimarlik</string>
    <string name="biyoloji">Biyoloji</string>
    <string name="kimya">Kimya</string>
    <string name="cevre_muhendisligi">Cevre Muhendisligi</string>
    <string name="tercih_listeme_ekle">Tercih Listeme Ekle</string>
    <string name="sayisal">Sayisal</string>
    <string name="esit">Esit</string>
    <string name="uyar_ntercihler_5_agustos_2022_saat_23_59_a_kadar_yapilabilecek">Uyarı:\nTercihler 5 Agustos 2022 saat 23.59\'a kadar yapilabilecek.</string>
    <string name="title_activity_login" />

</resources>