<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tercihlistem_constraintlayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/tercih_buddy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tercih_buddy"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textView_tercihlistem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tercih_listem"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tercih_buddy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tercihlistem_scrollview"
        app:layout_constraintBottom_toTopOf="@+id/tercih_listemden_kaldır"
        app:layout_constraintStart_toStartOf="@+id/textView_tercihlistem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tercihlistem"
        >
        <LinearLayout
            android:id="@+id/tercihlistem_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkbox_tercihlistem_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_18_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19_tercih_edilen_bolum"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/checkbox_tercihlistem_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_tercih_edilen_bolum"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/checkbox_tercihlistem_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_tercih_edilen_bolum"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/checkbox_tercihlistem_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_tercih_edilen_bolum"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/checkbox_tercihlistem_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_tercih_edilen_bolum"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/checkbox_tercihlistem_23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_tercih_edilen_bolum"
                android:textSize="12sp"
                />
            <CheckBox
                android:id="@+id/checkbox_tercihlistem_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_tercih_edilen_bolum"
                android:textSize="12sp"
                />
        </LinearLayout>
    </ScrollView>




    <Button
        android:id="@+id/ana_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/ana_menu"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/tercih_listemden_kaldır"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/tercih_listemden_kaldir"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/ana_menu"
        app:layout_constraintStart_toStartOf="@id/ana_menu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>