<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tercih_buddy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tercih_buddy"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uyar_ntercihler_5_agustos_2022_saat_23_59_a_kadar_yapilabilecek"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tercih_buddy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sehir_ve_universite_secimi_button"
        />

    <Button
        android:id="@+id/sehir_ve_universite_secimi_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/sehir_ve_universite_secimi"
        android:onClick="sehirveuniversitesecimi"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/alanlar_bölümler_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alanlar_bölümler_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alanlarbolumler"
        android:paddingBottom="30dp"

        android:text="@string/alanlar_bolumler"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/arama_kriterleri_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/arama_kriterleri_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="arama_kriterleri"
        android:paddingBottom="30dp"

        android:text="@string/arama_kriterleri"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tercih_listem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tercih_listem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonTercihListesi"
        android:paddingBottom="30dp"
        android:text="@string/tercih_listem"

        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>